--- a/bestshop/sass/layout/_layout4.scss
+++ b/bestshop/sass/layout/_layout4.scss
@@ -1420,7 +1420,7 @@
         .item-inner{
             .top-block{
                 position: relative;
-                oveflow: hidden;
+                overflow: hidden;
                 img.icon{
                     position: absolute;
                     top: -10%;
