--- a/bestshop/sass/responsive/responsive-479px-max.scss
+++ b/bestshop/sass/responsive/responsive-479px-max.scss
@@ -1,10 +1,12 @@
-@include breakpoint(xxxs){
+@include breakpoint(xxs){
 
     .common-home {
         .container{
             overflow: visible;
         }
     }
+
+    .col-xxs-12{width: 100%;}
 	/************************************************************************************************
         BLOCK HEADER  
     ************************************************************************************************ */
@@ -33,15 +35,16 @@
 
     /*[] HEADER 2 []*/
     header.typeheader-2{
+        #sosearchpro .search button{
+            padding: 0 20px;
+            #{$right}: -80px;
+        }
     }
     
     /*[] HEADER 3 []*/
     header.typeheader-3{
     }
-     /*[] HEADER 6 []*/
-    header.typeheader-6{
-        
-    }
+    
 
     /* **********************************************************************************************
         BLOCK HOME PAGE
@@ -65,16 +68,10 @@
 
     /*[] LAYOUT 2 []*/
 
-    .layout-2.common-home #content .module.listingtab-layout2 h3.modtitle{
-        margin-bottom: 40px !important;
-    }
+    
     .layout-2{
-        .listingtab-layout2 .so-listing-tabs .ltabs-tabs-container .ltabs-tabs-wrap.ltabs-selectbox{
-            top: 45px;
-        }
-        .layout2-listingtab2 .so-listing-tabs .ltabs-tabs-container .ltabs-tabs-wrap.ltabs-selectbox{
-            top: -5px;
-        }
+        .item img{width: 100%;}
+        .best-selling .item .item-inner .product-item-container .left-block{width: 100%;}
     }
 
     /*[] LAYOUT 3 []*/
@@ -88,28 +85,7 @@
    
     }
 
-    /*[] LAYOUT 5 []*/
-    .layout-5{
-      
-    }
-
-    /*[] LAYOUT 6 []*/
-    .layout-6{
-        .deals-layout6 .so-deal .extraslider-inner .item .product-thumb .inner{
-            .item-left{
-                width: 100%;
-            }
-            .item-right{
-                margin-#{$left}: 0;
-            }
-            .item-time-w .time-title{
-                display: none;
-            }
-            .item-timer{
-                float: $left;
-            }
-        } 
-    }
+    
     /************************************************************************************************
         BLOCK FOOTER  
     *************************************************************************************************/
@@ -118,11 +94,23 @@
     footer{ 
     }
 
-
-
-    footer.typefooter-3{ 
+    footer.typefooter-2{
+        .footer-top .contnet-footer-top{
+            padding: 30px 0;
+            ul.socials li:last-child a{margin-#{$right}: 0;}
+        }
     }
 
+    footer.typefooter-3{ 
+        .footer-top .newsletter .block_content .subcribe{width: 25%;}
+        .footer-top .newsletter .block_content input{width: 75%;}
+    }
+    footer.typefooter-4{
+        .footer-top .contnet-footer-top{
+            padding: 30px 0;
+            ul.socials li:last-child a{margin-#{$right}: 0;}
+        }
+    }
     
 
     /************************************************************************************************
@@ -347,12 +335,7 @@
         }
     }
 
-    /*.layout-2{
-        .box-category .so-categories .cat-wrap .content-box{
-            width: 50%;
-            padding: 0 15px;
-        }
-    }*/
+    
 
     .layout-3{
     }
