--- a/bestshop/css/themecss/cpanel.css
+++ b/bestshop/css/themecss/cpanel.css
@@ -158,5 +158,5 @@ textarea.get-css {
 }
 .banner-top{background: #6D47D9;} 
 .banner-top .alert {margin: 0;background: none;border:none; color: #dacdff;font-size: 14px; padding: 15px;}
-.banner-top  button.close{color: white; opacity: 0.8;}
+.banner-top  button.close{color: white; opacity: 0.8;right: 0;}
 .banner-top  button.close:hover{color: white;}
