--- a/bestshop/sass/layout/_layout2.scss
+++ b/bestshop/sass/layout/_layout2.scss
@@ -1298,6 +1298,7 @@
                     #{$left}: 50%;
                     transform: translate(-50%, -50%);
                     transition: all 0.3s ease;
+                    @include opacity(0);
                 }
                 &:hover{
                     img.icon{
