--- a/bestshop/sass/theme/_blog.scss
+++ b/bestshop/sass/theme/_blog.scss
@@ -7,25 +7,174 @@
     
 ==============================================*/
 
-/*============SO LATSET BLOG ==================*/
+/*============CONTENT ASIDE BLOG ==================*/
+.content-aside{
+  h3.modtitle2{
+        position: relative;
+        font-size: 16px;
+        font-weight: 700;
+        color: #222222;
+        text-transform: uppercase;
+        padding-bottom: 15px;
+        margin-bottom: 30px;
+        &:after{
+            content: "";
+            display: block;
+            width: 100%;
+            height: 2px;
+            position: absolute;
+            bottom: 0;
+            #{$left}: 0;
+            background: #eeeeee;
+        }
+        &:before{
+            content: "";
+            display: block;
+            width: 130px;
+            height: 2px;
+            position: absolute;
+            bottom: 0;
+            #{$left}: 0;
+            background: $linkColor;
+            z-index: 2;
+        }
+    }
+  .search{
+    position: relative;
+    margin-bottom: 50px;
+    input{
+      height: 40px;
+      width: 100%;
+      border: 1px solid #d7d7d7;
+      border-radius: 3px;
+      padding-#{$left}: 40px;
+    }
+    button{
+      position: absolute;
+      top: 0;
+      #{$left}: 0;
+      color: #999999;
+      background: none;
+      height: 40px;
+    }
+  }
+  .author {
+    margin-bottom: 40px;
+    .des-author{margin-top: 30px;}
+  }
+  .achive{
+    margin-bottom: 50px;
+    h3{
+      margin-bottom: 0;
+    }
+    ul li{
+      padding: 15px 0;
+      border-bottom: 1px solid #ebebeb;
+      &:last-child{
+        border: none;
+      }
+    }
+  }
+  .lastest-blog {
+    position: relative;
+    .so-extraslider {
+      .extraslider-inner{
+        position: static;
+      }
+      .owl2-controls{
+        .owl2-dots{
+          @include owl2-dot-style(8px,8px,#222);
+          #{$right}: 0;
+          top: 5px;
+          min-width: 60px;
+        }
+
+      }
+    }
+  }
+  
+
+}
 
 /*============ SIMPLE BLOG ==================*/
 
 .blog-category{
-    .modcontent{
-        padding: 0;
-        ul li{
-            border: none;
+    .block-item-inner{
+      margin-bottom: 60px;
+      .blog-item-img a img:hover{opacity: 0.8;@include transition(all 0.3s ease);}
+      .blog-item-content{
+        a h4{
+          font-weight: 700;
+          font-size: 20px;
+          color: #222;
+          margin-top: 20px;
+          &:hover{
+            color: $linkColor;
+          }
         }
+        .blog-meta{
+          padding-bottom: 20px;
+          border-bottom: 1px solid #eee;
+          margin-bottom: 20px;
+          span{margin-#{$right}: 20px;}
+          span{
+            color: #999999;
+            a{
+              color: #999999;
+              &:hover{
+                color: $linkColor;
+              }
+            }
+          }
+        }
+        .readmore a{
+          color: $linkColor;
+          &:hover{color:#123a71;}
+        }
+      }
     }
-    .filters-panel .list-view button.btn{
+    .item-inner{
+      margin-bottom: 40px;
+      h4 a{
+        color: #222;
+        font-size: 16px;
+        font-weight: 700;
+        &:hover{
+          color: $linkColor;
+        }
+      }
+    }
+}
+.content-pagination1{
+  text-align: center;
+  padding-top: 20px;
+  margin-bottom: 50px;
+  border-top: 1px solid #eee;
+  ul{
+    overflow: hidden;
+    display: inline-block;
+    li{
+      display: inline-block;
+      float: left;
+      margin: 5px;
+      a{
+        display: block;
+        padding: 10px 20px;
+        border: 1px solid #eaeaea;
+        
+        color: #222;
+        font-weight: 700;
+        text-transform: uppercase;
+      }
+      
+      &:hover a, &.active a{
+        background: $linkColor;
         color: #fff;
+      }
     }
+  }
 }
 
-.blog-header{margin: 0 0 20px;
-    h3{font-weight: bold;text-transform: uppercase;margin: 0 0 5px; @include rem(font-size, 16px);    color: $gray;}
-}
 .blog-cate{
   ul{
     margin-bottom: 0;
@@ -157,76 +306,186 @@
 
 /*============ARTICLE INFO==================*/
 div.article-info{
-    
-    .article-title{
-        h3{
-            font-size: 20px;
-            text-transform: uppercase;
-            color: $gray;
-            font-weight: bold;
-            margin-bottom: 5px;
-        }
+    .look-see{
+      h4{
+        font-size: 16px;
+        font-weight: 700;
+        text-transform: uppercase;
+        color: #222;
+        margin: 40px 0;
+      }
+      p{margin-bottom: 30px;}
     }
-    .article-sub-title{
-        display: inline-block;width:100%; margin-bottom: 10px;
+    .tags-share{
+      text-transform: uppercase;
+      overflow: hidden;
+      padding: 30px 0;
+      border-top: 1px solid #ebebeb;
+      border-bottom: 1px solid #ebebeb;
+      margin-bottom: 40px;
+      margin-top: 10px;
+      span{
+          font-weight: 700;
+          color: #222;
+        }
+      .tags{
+        line-height: 30px;
+        display: inline-block;
+        float: $left;
+        a{
+          color: #7d7d7d;
+          &:hover{color: $linkColor;}
+        }
+        
+      }
+      .share{
+        display: inline-block;
+        float: $right;
+        span{margin-#{$right}: 10px;}
         span{
-            display: block;
+          line-height: 30px;
+        }
+        .icon-share{
+          overflow: hidden;
+          float: $right;
+          ul li{
+            display: inline-block;
             float: $left;
-            color: $input-color-placeholder;
-            padding: 0 10px; font-size: 13px;
-           
-            &.article-author{padding-#{$left} : 0;
-                a{ @include linkGraylighter(); font-size: 13px;}
-            }
-            &.article-comment{border-#{$right} : 0;}
-        }
-        .article-share{display: none;}
-    }
-    .article-image{ margin-bottom: 30px;}
-    .article-description{margin-bottom: 30px;}
-    
-    .related-comment{
-        border-radius: 0;
-        border: 0;
-        border-top: 1px solid #e6e6e6;
-        padding-top: 40px;
-        box-shadow: none;
-        margin-top: 40px;
-        .article-reply{
-            border: none;
-            background: #f9f9f9;
-            .author{
-                font-weight: bold;
-                font-size: 16px;
-            }
-            .article-reply{
-                background: #f4f3f3;
-            }
-        }
-        .panel-body{padding: 0; border: 0;
-            .form-group #comments{padding: 0; border: 0; overflow: hidden;
-                h2#review-title{
-                    margin: 0 0 30px;
-                    padding: 0;
-                    font-weight: bold;
-                    text-transform: uppercase;
-                    font-size: 18px;
-                    color: #121212;
-                }
-            }
-        }
-        #button-comment{
-          
-            @media (min-width:992px){
-                padding: 10px 52px;
-            }    
-           
-        }
-    }
-    .panel-default{border-radius: 0; clear: both;}
-    .itemFullText{text-align: justify;}
-}
+            a{
+              display: block;
+              width: 30px;
+              height: 30px;
+              border-radius: 50%;
+              background: $linkColor;
+              line-height: 30px;
+              text-align: center;
+              color: #fff;
+              margin-#{$right}: 10px;
 
+              &:hover{
+                background: #16478a;
+              }
+            }
+          }
+        }
+      }
+    }
+    .author-details{
+      margin-bottom: 50px;
+      .infomation{
+        padding-#{$left}: 130px;
+        h4 {
+          margin-top: 0;
+          padding-top: 15px;
+          text-transform: uppercase;
+          span{
+            color: #b3b3b3;
+            font-size: 13px;
+            margin-#{$left}: 20px;
+            position: relative;
+            &:after{
+              content: "";
+              display: block;
+              width: 1px;
+              height: 100%;
+              background: #b3b3b3;
+              position: absolute;
+              top: 0;
+              #{$left}: -15px;
+            }
+          }
+        }
+      }
+    }
+    .related-news{
+      position: relative;
+      .extraslider-inner{
+        position: static;
+        .item-inner{
+          .top-block a img:hover{opacity: 0.8;}
+          .bottom-block{
+            .entry-meta{
+              font-size: 12px;
+              .entry-date, .entry-comment{
+                display: inline-block;
+                float: $left;
+                &.entry-date{
+                  margin-#{$right}: 15px;
+                }
+              }
+            }
+          }
+        }
+        .owl2-controls{
+          .owl2-dots{
+            @include owl2-dot-style(8px,8px,#222);
+            #{$right}: 0;
+            top: 5px;
+            min-width: 60px;
+          }
+
+        }
+      }
+    }
+    .comment{
+      margin-top: 50px;
+      .comment-details{margin-bottom: 30px;}
+      .comment-reply{margin-#{$left}: 100px;}
+      .infomation{
+        position: relative;
+        padding-#{$left}: 130px;
+        h4{
+          text-transform: uppercase;
+          font-size: 14px;
+          font-weight: 700;
+          color: #222;
+          padding-bottom: 10px;
+          margin-top: 0;
+          border-bottom: 1px solid #eaeaea;
+        }
+        .top-right{
+          display: inline-block;
+          position: absolute;
+          top: 0;
+          color: #b3b3b3;
+          #{$right}: 0;
+          a{
+            padding-#{$left}: 20px;
+            position: relative;
+            color: #b3b3b3;
+            &.reply{
+              color: $linkColor;
+              &:hover{color: #123567;}
+            }
+            &:hover{color: $linkColor;}
+            &:after{
+              content: "/";
+              position: absolute;
+              top: -2px;
+              #{$left}: 5px;
+            }
+          }
+        }
+      }
+    }
+    
+}
+.submit-comment{
+  margin-bottom: 50px;
+  .textarea{
+    margin: 30px 0;
+  }
+  button{
+    background: $linkColor;
+    color: #fff;
+    font-weight: 700;
+    border-radius: 3px;
+    &:hover{
+      background: #2169ce;
+      color: #fff;
+    }
+  }
+}
 .panel--related{
     @include imageFade();
     .caption  h4{font-size: 14px; margin: 10px 0;}
