--- a/bestshop/sass/theme/_bonus_page.scss
+++ b/bestshop/sass/theme/_bonus_page.scss
@@ -42,277 +42,100 @@ ul.yt-accordion li.accordion-group h3.accordion-heading:hover {color: white;back
 ul.yt-accordion li.accordion-group h3.accordion-heading:hover .fa{background: #666;}
 
 /*============ PAGE ABOUT US 1==============*/
-.item-article{
-  h2{
-    margin: 0;
+.about-us-type-1, .about-box-4, .about-box-3{
+  h3{
+    color: #222222;
+    text-transform: uppercase;
+    font-size: 18px;
+    font-weight: 700;
   }
-}
-.title-about-us{
-  background: url("#{$base-url-theme}icon/bg-title-about.png")repeat-x left 12px;
-  margin-bottom:17px;
-}
-
-
-.title-about-us h2 {
-  background: #fff;
-  display: inline-block;
-  font-size: 22px;
-  padding: side-values(0 25px 6px 0);
-  font-weight: 300;
-  color: #333;
-}
-
-.welcome-about-us {
-  .image-about-us {
-    float: $left;
-    width: 270px;
-    padding-top: 6px;
-  }
-   img:hover{
-      opacity: 0.7;
-    }
-  .des-about-us {
-    margin-#{$left}: 300px;
-    line-height: 18px;
+  h4{
+    color: #222222;
+    text-transform: uppercase;
+    font-size: 16px;
+    font-weight: 700;
+    margin-top: 30px;
+    margin-bottom: 20px;
   }
 }
 
-.our-member {
-  clear: both;
-  padding-top: 30px;
-   img:hover{
-      opacity: 0.7;
-    }
-  .title-about-us {
-  background: url("#{$base-url-theme}icon/bg-title-about.png")repeat-x $left 12px;
-    margin-bottom: 17px;
-    text-align: center;
-
-    h2 {
-      padding: 0 15px 6px 15px;
-      font-size: 22px;
-      font-weight: 300;
-      color: #333;
-    }
+.about-us-type-1{
+  text-align: center;
+  
+  .about-box-2{
+    margin: 40px 0;
+    p{text-align: $left;}
   }
-
-  .short-des {
-    text-align: center;
-    color: #909090;
-    margin-bottom: 35px;
-  }
-
-  .overflow-owl-slider {
-    padding-top: 50px;
-  }
-
-  .respl-item {
-    border: 1px solid #ddd;
-    margin-bottom: 30px;
-    .item-inner{
-      padding: 20px;
-      display: inline-block;
-    }
-    .w-image-box {
-      float: $left;
-      overflow: hidden;
-    }
-
-    .info-member {
-      text-align: $left;
-      margin-#{$left}: 185px;
-      .cl-name{
-        margin-top: 0;
-      }
-      ul{@extend ul.blank}
-      li{
-        float: $left;
-        .fa{
-          width: 29px;
-          height: 29px;
-          border: 1px solid #999;
-          line-height: 27px;
-          text-align: center;
-          color: #999;
-          border-radius: 50%;
-          margin-#{$right}: 5px;
-          display: inline-block;
-          &:hover{
-            color: $background1;
-            border-color: $background1;
-          }
-        }
-        .fa-f:before{
-           content: "\f09a";
-           font-family: FontAwesome;
-          }
-        .fa-t:before{
-           content: "\f099";
-           font-family: FontAwesome;
-          }
-        .fa-s:before{
-           content: "\f17e";
-           font-family: FontAwesome;
-          }
-        .fa-g:before{
-           content: "\f0d5";
-           font-family: FontAwesome;
-        }
-      }
-      .cl-name > a {
-        font-size: 15px;
-        text-transform: uppercase;
-        font-weight: bold;
-        color: #444;
-        &:hover{
-          color:$background1;
-        }
-      }
-
-      .cl-job {
-        padding: 5px 0px;
-        text-transform: uppercase;
-      }
-
-      .cl-des {
-        color: #909090;
-        margin-bottom: 15px;
-      }
-    }
-  }
-}
-
-.why-list { @extend ul.blank;
-  li {
+  .about-policy{text-align: $left;}
+  .slider-brands{
+    border: 1px solid #dcdde1;
+    background-color: #fff;
+    padding: 25px 0px;
+    margin: 50px 0;
     position: relative;
-    padding-#{$left}: 29px;
-
-    &:before {
-      content: "";
-      width: 14px;
-      height: 12px;
-      display: inline-block;
-      position: absolute;
-      #{$left}: 0px;
-      top: 10px;
-      background-repeat: no-repeat;
-      background-position: top $left;
-      background-image: url("#{$base-url-theme}icon/icon-whylist.png");
-    }
-
-    a {
-      display: block;
-      padding: 5px 0 7px;
-      background-image: url("#{$base-url-theme}icon/border-bottom-bs.png") repeat-x left bottom;
-    }
-
-    &:last-child > a {
-      background: none;
+    .contentslider{
+     padding: 0 40px;
+     position: relative;
+     .owl2-stage-outer{
+      direction: ltr;
     }
   }
-}
-
-.happy-about-us {
-    direction: ltr;
-  clear: both;
-  padding-top: 10px;
-  .happy-ab {
-    border: 1px solid #e9e9e9;
-    padding: 33px 8px 20px;
-
-    .title-happy-about {
+  .item{
+    text-align: center;
+    @include opacity(0.5);
+    @include transition(all 0.3s ease);
+    &:hover{
+      @include opacity(1);
+    }
+  }
+  .owl2-controls .owl2-nav{
+    @include owl2-nav-style4(45px,45px,30px); 
+    .owl2-prev, .owl2-next{
       background: #fff;
-      display: inline-block;
-      #{$left}: 20px;
-      padding: 5px 10px;
-      position: absolute;
-      top: -5px;
-
-      h2 {
-        font-size: 20px;
-        position: relative;
-        top: -2px;
-        color: #444; margin: 0;
+      border: 1px solid #aaaaaa;
+      &.owl2-prev{
+        #{$left}: 0;
+        @include transform(translateX(-50%));
+      }
+      &.owl2-next{
+        #{$right}: 0;
+        @include transform(translateX(50%));
+      }
+      &:hover:before{
+        color: #fff;
+      }
+      &:before{
+        color: #aaaaaa;
       }
     }
+  } 
+}
 
-    .ct-why {
-      padding: 0 10px 0 25px;
-      position: relative;
-        @include if-rtl {direction: rtl;}
-      .client-say {
-        font-size: 107.69%;
-        color: #909090;
-        margin-bottom: 10px;
-      }
 
-      .client-info-about {
-        color: #000;
-
-        .name {
-          font-size: 18px;
-          color: $linkColor;
-        }
-      }
-    }
+}
+.about-box-3{
+  text-align: center;
+  background: #f5f5f5;
+  margin: 50px 0;
+  padding: 50px 0;
+}
+.about-box-4{
+  text-align: center;
+  .about-team-top{
+    p{width: 600px;
+    display: inline-block;}
   }
-  .owl2-controls {
-    background: #fff;
-    padding: 0 5px;
-    position: absolute;
-    #{$right}: 2px;
-    top: -47px;
-  }
-
-  .owl2-controls .owl2-prev,
-  .owl2-controls .owl2-next {
-    border: none;
-    display: inline-block;
-    width: 26px ;
-    height: 26px ;
-    background-position: left top;
-    background-repeat: no-repeat;
+  .about-team-bot{
     overflow: hidden;
-    text-indent: -9999px;
-    background-color: transparent ;
-    top: 0px;
-    margin: 0 3px;
-    position: relative;
-  }
-
-  .owl2-controls .owl2-prev {
-    background-image: url("#{$base-url-theme}icon/btn-prev-hp.png");
-    margin-right: 3px;
-    right: 0px ;
-    left: inherit ;
-  }
-
-  .owl2-controls .owl2-nav {
-    width: 68px;
-    display: inline-block;
-    height: 26px;
-    background: #fff;
-  }
-
-  .owl2-controls .owl2-next {
-   background-image: url("#{$base-url-theme}icon/btn-next-hp.png");
-    right: 0px ;
-  }
-
-  .item > div:before {
-    content: "";
-    display: inline-block;
-    position: absolute;
-    width: 16px;
-    height: 12px;
-    left: 0px;
-    top: 6px;
-  }
-
-  .owl2-dots {
-    display: none ;
+    margin: 0 -15px;
+    .team-member{
+      width: 20%;
+      float: $left;
+      padding: 15px;
+    }
   }
 }
+
 
 /*====*/
 //---------------Page About us -------------------------
@@ -669,7 +492,8 @@ ul.yt-accordion li.accordion-group h3.accordion-heading:hover .fa{background: #6
     .icon{float: $left; padding-#{$right}: 15px;
         .fa{font-size: 20px;}
     }
-    .comment{line-height: 24px;}
+    .comment{line-height: 24px;margin-bottom: 30px;}
+    .info-store{margin-bottom: 50px;}
 }
 .contact-form{
     legend{border-bottom: 0;}
